# HEIC-to-JPEG-format

./: README.md  package-lock.json  package.json  pyproject.toml
heic_to_jpeg/: __init__.py  cli.py  converter.py
tests/: test_converter.py
